# telephone-book-api

./: LICENSE  README.md  main.py  pyproject.toml
project/: settings.py
