[project]
name = "telephone-book-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "coverage>=7.11.3",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.5",
]
